cmake_minimum_required(VERSION 3.16)
project(ProblemSolving_Practice)

set(CMAKE_CXX_STANDARD 14)

#add_executable(ProblemSolving_Practice
#        A2oj_Ladders/First_Time_To_Solve/Omar_ProblemSet.cpp)
#        README.md)
#InterviewBit/Amazon_Interview_Questions/GasStation_ProblemSet.cpp
add_executable(ProblemSolving_Practice
        A2oj_Ladders/Codeforces_Div_2A/A_Petya_And_Strings_ProblemSet.cpp)

